fixed the team section alignment

--- a/src/css/index.css
+++ b/src/css/index.css
@@ -164,6 +164,12 @@ body .main-content .hero-section .hero-content .heros:hover h1 {
     font-size: 80px;
     flex-wrap: wrap;
 }
+.mtt-section{
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	align-items: center;
+}
 
 .projects-card div {
     font-size: 22px;
@@ -191,7 +197,7 @@ body .main-content .hero-section .hero-content .heros:hover h1 {
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
-    justify-content: center;
+	justify-content: center;
     align-items: flex-start;
 }
 
